--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-asgiref==3.2.3
-chardet==3.0.4
-Django==3.0.1
+asgiref==3.4.1
+dj-database-url==0.5.0
+Django==3.2
 django-allauth==0.41.0
-django-crispy-forms==1.8.1
-idna==2.8
-oauthlib==3.1.0
-Pillow==7.0.0
-python3-openid==3.1.0
-pytz==2019.3
-requests==2.22.0
+django-countries==7.2.1
+django-crispy-forms==1.14.0
+env==0.1.0
+gunicorn==20.1.0
+oauthlib==3.1.1
+Pillow==9.0.0
+pylint-django==2.5.0
+pylint-plugin-utils==0.7
+python3-openid==3.2.0
+pytz==2021.3
 requests-oauthlib==1.3.0
-sqlparse==0.3.0
-urllib3==1.25.7
+sqlparse==0.4.2
+stripe==2.65.0
