--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ env==0.1.0
 gunicorn==20.1.0
 oauthlib==3.1.1
 Pillow==9.0.0
+psycopg2-binary==2.9.3
 pylint-django==2.5.0
 pylint-plugin-utils==0.7
 python3-openid==3.2.0
